update styling for safari on iOS, fix markdown line breaks

--- a/src/scss/components/_blog.scss
+++ b/src/scss/components/_blog.scss
@@ -208,13 +208,18 @@
       padding: var(--space-m);
       background-color: var(--color-surface);
       background-image: 
-        url("data:image/svg+xml,%3Csvg viewBox='0 0 200 200' xmlns='http://www.w3.org/2000/svg'%3E%3Cfilter id='noise'%3E%3CfeTurbulence type='fractalNoise' baseFrequency='0.65' numOctaves='3' stitchTiles='stitch'/%3E%3C/filter%3E%3Crect width='100%25' height='100%25' filter='url(%23noise)'/%3E%3C/svg%3E"),
+        url("data:image/svg+xml,%3Csvg viewBox='0 0 200 200' xmlns='http://www.w3.org/2000/svg'%3E%3Cfilter id='noise' color-interpolation-filters='sRGB'%3E%3CfeTurbulence type='fractalNoise' baseFrequency='0.65' numOctaves='3' stitchTiles='stitch'/%3E%3C/filter%3E%3Crect width='100%25' height='100%25' filter='url(%23noise)' opacity='0.15'/%3E%3C/svg%3E"),
         linear-gradient(to right, var(--color-background-grid) var(--grid-strength), transparent var(--grid-strength)),
         linear-gradient(to bottom, var(--color-background-grid) var(--grid-strength), transparent var(--grid-strength));
       background-size: 200px 200px, calc(var(--grid-size) / 2) calc(var(--grid-size) / 2);
       background-position: 0 0;
       background-repeat: repeat;
+      -webkit-background-blend-mode: soft-light, normal, normal;
       background-blend-mode: soft-light, normal, normal;
+      transform: translateZ(0);
+      -webkit-transform: translateZ(0);
+      -webkit-backface-visibility: hidden;
+      backface-visibility: hidden;
 
       h3 {
         color: var(--color-text-muted);
