--- a/src/scss/components/_navigation.scss
+++ b/src/scss/components/_navigation.scss
@@ -2,14 +2,18 @@
 @use 'textures' as *;
 
 .site-header {
+    position: -webkit-sticky;
     position: sticky;
     top: 0;
     z-index: 100;
     width: 100%;
     background-color: var(--color-background);
+    -webkit-backdrop-filter: blur(8px);
     backdrop-filter: blur(8px);
     border-bottom: 1px solid var(--color-background-grid);
     padding: 0;
+    transform: translateZ(0);
+    -webkit-transform: translateZ(0);
     @include texture-overlay;
 }
 
