--- a/src/scss/components/_textures.scss
+++ b/src/scss/components/_textures.scss
@@ -1,7 +1,7 @@
 @use '../tokens' as *;
 
 // Noise texture using SVG
-$noise-svg: "data:image/svg+xml,%3Csvg viewBox='0 0 200 200' xmlns='http://www.w3.org/2000/svg'%3E%3Cfilter id='noise'%3E%3CfeTurbulence type='fractalNoise' baseFrequency='0.65' numOctaves='3' stitchTiles='stitch'/%3E%3C/filter%3E%3Crect width='100%25' height='100%25' filter='url(%23noise)'/%3E%3C/svg%3E";
+$noise-svg: "data:image/svg+xml,%3Csvg viewBox='0 0 200 200' xmlns='http://www.w3.org/2000/svg'%3E%3Cfilter id='noise' color-interpolation-filters='sRGB'%3E%3CfeTurbulence type='fractalNoise' baseFrequency='0.65' numOctaves='3' stitchTiles='stitch'/%3E%3C/filter%3E%3Crect width='100%25' height='100%25' filter='url(%23noise)'/%3E%3C/svg%3E";
 
 @mixin texture-overlay {
   position: relative;
@@ -16,8 +16,12 @@ $noise-svg: "data:image/svg+xml,%3Csvg viewBox='0 0 200 200' xmlns='http://www.w
     background-image: url($noise-svg);
     opacity: 0.15;
     pointer-events: none;
+    -webkit-mix-blend-mode: soft-light;
     mix-blend-mode: soft-light;
     z-index: 0;
+    transform: translateZ(0);
+    -webkit-backface-visibility: hidden;
+    backface-visibility: hidden;
   }
   
   & > * {
