--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -73,7 +73,7 @@ body {
   
   // Grid pattern
   background-image: 
-    url("data:image/svg+xml,%3Csvg viewBox='0 0 200 200' xmlns='http://www.w3.org/2000/svg'%3E%3Cfilter id='noise'%3E%3CfeTurbulence type='fractalNoise' baseFrequency='0.65' numOctaves='3' stitchTiles='stitch'/%3E%3C/filter%3E%3Crect width='100%25' height='100%25' filter='url(%23noise)'/%3E%3C/svg%3E"),
+    url("data:image/svg+xml,%3Csvg viewBox='0 0 200 200' xmlns='http://www.w3.org/2000/svg'%3E%3Cfilter id='noise' color-interpolation-filters='sRGB'%3E%3CfeTurbulence type='fractalNoise' baseFrequency='0.65' numOctaves='3' stitchTiles='stitch'/%3E%3C/filter%3E%3Crect width='100%25' height='100%25' filter='url(%23noise)' opacity='0.15'/%3E%3C/svg%3E"),
     linear-gradient(to bottom,
       transparent,
       var(--color-gradient-start) 15%,
@@ -84,5 +84,6 @@ body {
   background-size: 200px 200px, 100% 100%, var(--grid-size) var(--grid-size), var(--grid-size) var(--grid-size);
   background-position: 0 0, 0 0, 0 0, 0 0;
   background-repeat: repeat, no-repeat, repeat, repeat;
+  -webkit-background-blend-mode: soft-light, normal, normal, normal;
   background-blend-mode: soft-light, normal, normal, normal;
 }
